--- a/spring-boot-ignite-secured/pom.xml
+++ b/spring-boot-ignite-secured/pom.xml
@@ -32,7 +32,7 @@
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-jetty</artifactId>
-		<version>${spring.boot.version}</version>
+		<version>1.4.7.RELEASE</version>
 	</dependency>
 	
 	<dependency>
